--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
       type="image/x-icon"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#000000f3" />
-    <meta name="msapplication-navbutton-color" content="#000000f3" />
-    <meta content="#000000f3" name="msapplication-navbutton-color" />
+    <meta name="theme-color" content="#f52f58" />
+    <meta name="msapplication-navbutton-color" content="#f52f58" />
+    <meta content="#f52f58" name="msapplication-navbutton-color" />
     <meta content="yes" name="apple-mobile-web-app-capable" />
     <meta
       content="black-translucent"
       name="apple-mobile-web-app-status-bar-style"
     />
-    <title>Welcome to Elder Intelligence</title>
+    <title>Welcome to Chumcore</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
